<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f9fe"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_op_layout" />
	<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dip"
            android:text="@string/titulo_ayuda"
            android:textColor="#FF3300"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayuda_introduccion"
            android:textColor="#006699"
            android:textSize="15sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/telfayuda1"
            android:textColor="#CC6600"
            android:textSize="16sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/telfayuda2"
            android:textColor="#CC6600"
            android:textSize="16sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayudainst1"
            android:textColor="#CC6600"
            android:textSize="16sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayudadet1"
            android:textColor="#006699"
            android:textSize="14sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayudainst2"
            android:textColor="#CC6600"
            android:textSize="16sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayudadet2"
            android:textColor="#006699"
            android:textSize="14sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayudainst3"
            android:textColor="#CC6600"
            android:textSize="16sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayudadet3"
            android:textColor="#006699"
            android:textSize="14sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayudainst4"
            android:textColor="#CC6600"
            android:textSize="16sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayudadet4"
            android:textColor="#006699"
            android:textSize="14sp" />
        
    </LinearLayout>
</ScrollView>
</LinearLayout>