<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f9fe"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_op_layout" />
	<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dip"
            android:text="@string/titulo_infoviolencia"
            android:textColor="#FF3300"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/violencia1"
            android:textColor="#006699"
            android:textSize="15sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/violencia2"
            android:textColor="#006699"
            android:textSize="15sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/violencia3"
            android:textColor="#006699"
            android:textSize="15sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/violencia4"
            android:textColor="#006699"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>
</LinearLayout>